Patch phoenix5 client to work with JDK17